--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,6 +4,14 @@ environment:
     PYTHON: "C:\\Python37"
 
     matrix:
+        - MINGW_CONFIGURATIONS: '4.9@x86_64@seh@posix'
+          CONAN_BASH_PATH: "c:\\msys64\\usr\\bin\\bash"
+        - MINGW_CONFIGURATIONS: '5@x86_64@seh@posix'
+          CONAN_BASH_PATH: "c:\\msys64\\usr\\bin\\bash"
+        - MINGW_CONFIGURATIONS: '6@x86_64@seh@posix'
+          CONAN_BASH_PATH: "c:\\msys64\\usr\\bin\\bash"
+        - MINGW_CONFIGURATIONS: '7@x86_64@seh@posix'
+          CONAN_BASH_PATH: "c:\\msys64\\usr\\bin\\bash"
         - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
           CONAN_VISUAL_VERSIONS: 12
           CONAN_BUILD_TYPES: Release
@@ -24,7 +32,7 @@ environment:
           CONAN_BUILD_TYPES: Debug
 
 install:
-  - set PATH=%PATH%;%PYTHON%/Scripts/
+  - set PATH=%PYTHON%;%PYTHON%/Scripts/;%PATH%
   - pip.exe install conan --upgrade
   - pip.exe install conan_package_tools bincrafters_package_tools
   - conan user # It creates the conan data directory
